--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -30,6 +30,7 @@
 .sidebar .recent{
     display:flex;
     flex-direction:column;
+    animation:fadeIn 1.5s;
 }
 
 .sidebar .recent-title{
@@ -53,5 +54,11 @@
 .sidebar .bottom{
     display:flex;
     flex-direction:column;
+}
+@media (max-width:600px){
+    .sidebar{
+        display:none;
+        
+    }
 }
 
